modificação na estrutura dos produtos do da vitrine pagina inicial e animação do aside categorias

--- a/css/produtos_vitrini.css
+++ b/css/produtos_vitrini.css
@@ -21,11 +21,6 @@
     line-height: 50px;
     border-radius: 50%;
 }
-.produtos_vitrini{
-    display: flex;
-    justify-content: first baseline;
-    align-items: center;
-}
 .card_produtos{
     border-radius: 10px;
     width: 200px;
@@ -50,4 +45,9 @@
     position: absolute;
     margin-top: -2em;
     margin-left: -2em;
+}
+/* BTNS SHOW MENU TAGS PRODUTOS */
+#btnbars{
+    background: #4AC767;
+    width: 100%;
 }
