alterações da estrutura da pagina de pesquisar empresa body.php e estylo body.css e menu_top.php

--- a/css/body.css
+++ b/css/body.css
@@ -4,7 +4,7 @@
     background-color: #fff;
     border-radius: 5px;
     width: 100%;
-    margin-top: 3em;
+    margin-top: 0.5em;
 }
 
 .link_pesquisar{
@@ -29,16 +29,10 @@
     background-position: bottom;
     background-repeat: no-repeat;
     background-blend-mode: multiply;
-    background-color: #3a3a3ab9;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    flex-wrap: wrap;
-    height: 400px;
+    height: 555px;
 }
 #search{
-    background: #f1f1f1;
+    background: #fff;
     color: #4c7ce2;
     font-family: 'Roboto', sans-serif;
 }
