pequena modificações css

--- a/css/background-login.css
+++ b/css/background-login.css
@@ -5,20 +5,18 @@
 	z-index: 200;
 	width: 300px;
 	position: absolute;
-	background: #4AC767;
+	background: #fff;
 	border-radius: 5px;
 	/* box-shadow: 0px 0px 12px -7px #333; */
 	/* visibility: hidden; */
 	display: none;
 }
 #btn-loginIn{
-	background: #f9f960; 
-	color: #ffa20a; 
-	box-shadow: 0px 5px 10px -5px #f9f960;
+	box-shadow: 0px 5px 10px -5px blue;
 }
 #btn-cadastra-login, #btn-recovery-senhar{
 	background: transparent !important; 
-	color: #fff;
+	color: #333;
 	border-radius: 30px;
 }
 .loading_icon_login i{
