--- a/css/body.css
+++ b/css/body.css
@@ -93,3 +93,21 @@ div.box_divs_body{
     flex-direction: column;
     flex-wrap: wrap;
 }
+/* pagina barra_information.php */
+#infoFloat{
+    border-radius: 30px;
+    background: #fff;
+    margin-top: -7em;
+    left: 8em;
+}
+.info_icon{
+    background: #eee781;
+    color: #93b110;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+    width: 50px;
+    height:50px;
+    border-radius: 100%;
+}
