--- a/css/footer.css
+++ b/css/footer.css
@@ -4,3 +4,12 @@
 .footer-site-right{
     background: #ffffff;
 }
+#mapFooter{
+    background-image: url('../img/logo_oficial/map.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: scroll;
+    background-blend-mode: multiply;
+    height: 400px;
+}
