--- a/css/body.css
+++ b/css/body.css
@@ -6,7 +6,20 @@
     width: 100%;
     margin-top: 0.5em;
 }
-
+.avatarImage{
+    display: flex;
+    justify-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+.avatarImage img{
+    width: 100px;
+    height: 100px;
+    /* border: 1px solid #333; */
+    /* overflow: hidden; */
+    border-radius: 100%;
+}
 .link_pesquisar{
     display: flex;
     justify-content: flex-start;
@@ -24,17 +37,29 @@
     font-family: 'Roboto', sans-serif;
 }
 .box_search{
-    background-image: url('../img/logo_oficial/pexels-photo-811108.jpeg');
+    background-image: url('../img/logo_oficial/pexels-photo-811108.jpeg'),linear-gradient(93.6deg, #03648b, #7a07e6);
+    /* background: linear-gradient(93.6deg, #03648b, #7a07e6);
+    background: -webkit-linear-gradient(93.6deg, #03648b, #7a07e6);
+    background: -moz-linear-gradient(93.6deg, #03648b, #7a07e6);
+    background: -o-linear-gradient(93.6deg, #03648b, #7a07e6); */
     background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
     background-blend-mode: multiply;
-    height: 555px;
+    height: 655px;
 }
+
 #search{
-    background: #fff;
-    color: #4c7ce2;
+    background: #0fb676;
+    color: #ffffff;
+    border: none;
     font-family: 'Roboto', sans-serif;
+}
+.bg-backgrounds{
+    background: #0fb676;
+}
+#search::-webkit-input-placeholder{
+    color: #ffffff;
 }
 ::-webkit-input-placeholder{
     color: #0fb676;
@@ -94,12 +119,6 @@ div.box_divs_body{
     flex-wrap: wrap;
 }
 /* pagina barra_information.php */
-#infoFloat{
-    border-radius: 30px;
-    background: #fff;
-    margin-top: -7em;
-    left: 8em;
-}
 .info_icon{
     background: #eee781;
     color: #93b110;
@@ -112,7 +131,9 @@ div.box_divs_body{
     border-radius: 100%;
 }
 .divs_icons{
-    background: rgb(229, 245, 4);
+    position: relative;
+    margin-top: -2em;
+    background: rgb(4, 245, 153);
     height: 100px;
     width: 100px;
     display: flex;
@@ -120,6 +141,9 @@ div.box_divs_body{
     align-content: center;
     flex-wrap: wrap;
     border-radius: 100%;
+}
+#divs{
+    padding: 12px;
 }
 .el{
   background:  #1db110;
