--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('nav_top.css');
+@import url('barra_information.css');
 @import url('body.css');
 @import url('loja.css');
 @import url('layout_carrinho.css');
